<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.restaurantList.RestaurantListFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:alpha="0.5"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp">

        <ImageView
            android:id="@+id/imageViewSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/editTextSearch"
            style="@style/TextSubtitle16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:hint="@string/e_g_chinese_pizza"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:alpha="0.5"
        android:background="@color/gray" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:visibility="gone"
        style="@style/TextSubtitle16"
        tools:text="No Results Found" />

    <Button
        android:id="@+id/buttonRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:visibility="gone"
        android:textSize="18sp"
        android:paddingHorizontal="24dp"
        android:textColor="@color/white"
        android:text="@string/retry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        tools:listitem="@layout/restaurant_item_layout" />

</LinearLayout>