<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.restaurantDetail.RestaurantDetailFragment">

    <ImageView
        android:id="@+id/restaurantImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/restaurant_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/error_placeholder" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantImageView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/ic_menu"
            app:iconGravity="top"
            app:iconSize="36dp"
            app:iconTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/call_us"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/ic_call_us"
            app:iconGravity="top"
            app:iconSize="36dp"
            app:iconTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/ic_location"
            app:iconGravity="top"
            app:iconSize="36dp"
            app:iconTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favouriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/favorite"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/ic_favourite_detail"
            app:iconGravity="top"
            app:iconSize="36dp"
            app:iconTint="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/txtViewRestaurantName"
        style="@style/TextTitle26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:text="The Meatball &amp; Wine Bar" />

    <TextView
        android:id="@+id/txtViewRestaurantType"
        style="@style/TextSubtitle16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.8"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRestaurantName"
        tools:text="Pizza ● Casual Dining ● Vegetarian ● $" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="12dp"
        android:alpha="0.3"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRestaurantType"
        tools:layout_editor_absoluteX="36dp" />

    <TextView
        android:id="@+id/txtViewHours"
        style="@style/TextSubtitle16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="Hours: 11:00 AM - 10:00 PM" />

    <TextView
        android:id="@+id/txtViewLocation"
        style="@style/TextSubtitle16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_location_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewHours"
        tools:text="105 Swan Street Richmond ● 1.0km Away" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDeals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/deal_item_layout"
        tools:itemCount="2"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>